gitlab-ci: go get fyne-cross
Change-Id: I20014c7e7dab6ee54af137806b28317a930aa5a6

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,12 @@ stages:
   - build
   - deploy
 
+before_script:
+    - pushd $GOPATH
+    - go get -u fyne.io/fyne/cmd/fyne
+    - go get -u github.com/fyne-io/fyne-cross
+    - popd
+
 format:
   stage: test
   script:
