gitlab-ci: Cache go packages
Change-Id: Iefd8700ad6d7c7e233779c0ccefd4145764db03c

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,11 @@
 image: golang:latest
 
+cache:
+  paths:
+    - /go/src/fyne.io
+    - /go/src/github.com
+    - /go/src/golang.org
+
 stages:
   - test
   - build
